deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-e2e-local
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-e2e-local
  template:
    metadata:
      labels:
        app: devops-e2e-local
    spec:
      containers:
      - name: app
        image: sreemanthenaclouddevops/devops-e2e-local:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
