service.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-service
spec:
  type: NodePort
  selector:
    app: devops-e2e-local
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30007


# apiVersion: v1
# kind: Service
# metadata:
#   name: devops-service
# spec:
#   type: NodePort
#   selector:
#     app: devops-demo
#   ports:
#     - port: 80
#       targetPort: 5000
#       nodePort: 30007
